manifiesto/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Id_Externo__c</fullName>
        <externalId>true</externalId>
        <label>Id Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peligrosidad__c</fullName>
        <label>Peligrosidad</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unidad_de_Medida__c</fullName>
        <label>Unidad de Medida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M3</fullName>
                </value>
                <value>
                    <fullName>Ton</fullName>
                </value>
                <value>
                    <fullName>Hr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>